5.0a4 -> 5.0b1:
    - jbj: flesh out rpmgc implementation. stil buggy ...
    - jbj: stub in rpmgc/rpmssl for gcrypt & openssl signature verification.
    - rse: add XAR support to "devtool standalone"
    - jbj: fix: s/RPM_/RPMLIB_/ in rpmversion.h.in. That should "stick" now.
    - rpm.org: credit for the original NSS hacks.
    - jbj: no-brainer AutoFu for WITH_NSS enabling, add rpmnss.[ch] to rpmio.
    - jbj: tkey indicates functional DSA verification with rpmnss.c.
    - jbj: fix: debug the stoopids in rpmnss.c.
    - jbj: eliminate dueling typdef byte, beecrypt "owns" the typedef.
    - jbj: make sure that yum can upgrade zlib-devel. Trash the DEAD code.
    - jbj: resurrect rpmMergeHeadersFromFD goop. Yah, mon, DEAD code ...
    - jbj: re-add symbols needed for rpm-python import to loader map.
    - jbj: stub in WITH_NSS define to try rpmnss. Yep, borked, but now tested.
    - jbj: complete rpmnss.[ch] implementation (untested).
    - jbj: stub in the rpmnss.[ch] implementation.
    - jbj: pluggable RSA/DSA signature verification framework.
    - rpm.org: Rename _rpmdbMatchIterator -> rpmdbMatchIterator_s.
    - jbj: split out implementation specific storage from pgpDig.
    - jbj: create rpmbc.c and rpmbc.h to hide beecrypt signature internals.
    - jbj: hide additional beecrypt RSA/DSA signature verification.
    - jbj: add toy methods to hide beecrypt RSA/DSA signature verification.
    - rpm.org: Split digest-stuff out of rpmio_internal to separate header.
    - rpm.org: Eliminate copy-paste fd digest stealing, stuff into rpmio_internal.
    - rpm.org: Add doxygen grouping to rpmte methods.
    - rpm.org: Add doxygen grouping to rpmds methods.
    - rpm.org: Lose the useless rpmrc python stuff, group macro handling to rpmmacro-py.
    - rpm.org: rpmpgp doxygen tagging.
    - rpm.org: Add bunch of missing rpmts doxygen groupings.
    - rpm.org: Move file state defs to rpmfi where they logically belong.